[project]
name = "weightgain"
version = "0.2.0"
description = "Train an adapter for any embedding model in <1min"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.39.1",
    "litellm>=1.61.20",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
